--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,12 +20,13 @@
 
 
 
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/ly_swipe"
-    android:background="@drawable/main_bg_day"
-    tools:context=".ui.view.home.HomeFragment">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ly_swipe"
+        android:background="@drawable/main_bg_day"
+        tools:context=".ui.view.home.HomeFragment">
 
 
         <FrameLayout
@@ -790,11 +791,8 @@
 
 
 
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-
-
-
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
 </layout>
