--- a/app/src/main/res/layout/name_item.xml
+++ b/app/src/main/res/layout/name_item.xml
@@ -8,7 +8,7 @@
     <TextView
         android:id="@+id/tvNameResult"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_margin="6dp"
         android:gravity="center_vertical"
         android:text="Name"
